fix: TotalDeathの欠損値変更

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2466,14 +2466,512 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i, el in enumerate(train[\"TotalDeaths\"]):\n",
-    "    el = el.replace(\",\",\"\")\n",
+    "    if type(el) == str:\n",
+    "        el = el.replace(\",\",\"\")\n",
     "    train[\"TotalDeaths\"] = int(el)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train[\"TotalDeaths\"].fillna(train.TotalDeaths.mean(), inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#                         0\n",
+      "Country                   0\n",
+      "Total\\r\\nCases            0\n",
+      "TotalDeaths               0\n",
+      "New\\r\\nDeaths           227\n",
+      "Total\\r\\nRecovered       16\n",
+      "Active\\r\\nCases          15\n",
+      "Serious,\\r\\nCritical     83\n",
+      "Tot Cases/\\r\\n1M pop      2\n",
+      "Deaths/\\r\\n1M pop         7\n",
+      "Total\\r\\nTests           16\n",
+      "Tests/\\r\\n1M pop         16\n",
+      "Population                2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Total\\r\\nCases</th>\n",
+       "      <th>TotalDeaths</th>\n",
+       "      <th>New\\r\\nDeaths</th>\n",
+       "      <th>Total\\r\\nRecovered</th>\n",
+       "      <th>Active\\r\\nCases</th>\n",
+       "      <th>Serious,\\r\\nCritical</th>\n",
+       "      <th>Tot Cases/\\r\\n1M pop</th>\n",
+       "      <th>Deaths/\\r\\n1M pop</th>\n",
+       "      <th>Total\\r\\nTests</th>\n",
+       "      <th>Tests/\\r\\n1M pop</th>\n",
+       "      <th>Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>98,166,904</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94,962,112</td>\n",
+       "      <td>2,120,510</td>\n",
+       "      <td>2,970</td>\n",
+       "      <td>293,206</td>\n",
+       "      <td>3,239</td>\n",
+       "      <td>1,118,158,870</td>\n",
+       "      <td>3,339,729</td>\n",
+       "      <td>334,805,269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>India</td>\n",
+       "      <td>44,587,307</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44,019,095</td>\n",
+       "      <td>39,583</td>\n",
+       "      <td>698</td>\n",
+       "      <td>31,698</td>\n",
+       "      <td>376</td>\n",
+       "      <td>894,416,853</td>\n",
+       "      <td>635,857</td>\n",
+       "      <td>1,406,631,776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>France</td>\n",
+       "      <td>35,342,950</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34,527,115</td>\n",
+       "      <td>660,757</td>\n",
+       "      <td>869</td>\n",
+       "      <td>538,892</td>\n",
+       "      <td>2,365</td>\n",
+       "      <td>271,490,188</td>\n",
+       "      <td>4,139,547</td>\n",
+       "      <td>65,584,518</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   # Country Total\\r\\nCases  TotalDeaths  New\\r\\nDeaths Total\\r\\nRecovered  \\\n",
+       "0  1     USA     98,166,904            1            NaN         94,962,112   \n",
+       "1  2   India     44,587,307            1            NaN         44,019,095   \n",
+       "2  3  France     35,342,950            1            NaN         34,527,115   \n",
+       "\n",
+       "  Active\\r\\nCases Serious,\\r\\nCritical Tot Cases/\\r\\n1M pop Deaths/\\r\\n1M pop  \\\n",
+       "0       2,120,510                2,970              293,206             3,239   \n",
+       "1          39,583                  698               31,698               376   \n",
+       "2         660,757                  869              538,892             2,365   \n",
+       "\n",
+       "  Total\\r\\nTests Tests/\\r\\n1M pop     Population  \n",
+       "0  1,118,158,870        3,339,729    334,805,269  \n",
+       "1    894,416,853          635,857  1,406,631,776  \n",
+       "2    271,490,188        4,139,547     65,584,518  "
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Total\\r\\nCases</th>\n",
+       "      <th>TotalDeaths</th>\n",
+       "      <th>New\\r\\nDeaths</th>\n",
+       "      <th>Total\\r\\nRecovered</th>\n",
+       "      <th>Active\\r\\nCases</th>\n",
+       "      <th>Serious,\\r\\nCritical</th>\n",
+       "      <th>Tot Cases/\\r\\n1M pop</th>\n",
+       "      <th>Deaths/\\r\\n1M pop</th>\n",
+       "      <th>Total\\r\\nTests</th>\n",
+       "      <th>Tests/\\r\\n1M pop</th>\n",
+       "      <th>Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>98,166,904</td>\n",
+       "      <td>1,084,282</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94,962,112</td>\n",
+       "      <td>2,120,510</td>\n",
+       "      <td>2,970</td>\n",
+       "      <td>293,206</td>\n",
+       "      <td>3,239</td>\n",
+       "      <td>1,118,158,870</td>\n",
+       "      <td>3,339,729</td>\n",
+       "      <td>334,805,269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>India</td>\n",
+       "      <td>44,587,307</td>\n",
+       "      <td>528,629</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44,019,095</td>\n",
+       "      <td>39,583</td>\n",
+       "      <td>698</td>\n",
+       "      <td>31,698</td>\n",
+       "      <td>376</td>\n",
+       "      <td>894,416,853</td>\n",
+       "      <td>635,857</td>\n",
+       "      <td>1,406,631,776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>France</td>\n",
+       "      <td>35,342,950</td>\n",
+       "      <td>155,078</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34,527,115</td>\n",
+       "      <td>660,757</td>\n",
+       "      <td>869</td>\n",
+       "      <td>538,892</td>\n",
+       "      <td>2,365</td>\n",
+       "      <td>271,490,188</td>\n",
+       "      <td>4,139,547</td>\n",
+       "      <td>65,584,518</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   # Country Total\\r\\nCases TotalDeaths  New\\r\\nDeaths Total\\r\\nRecovered  \\\n",
+       "0  1     USA     98,166,904   1,084,282            NaN         94,962,112   \n",
+       "1  2   India     44,587,307     528,629            NaN         44,019,095   \n",
+       "2  3  France     35,342,950     155,078            NaN         34,527,115   \n",
+       "\n",
+       "  Active\\r\\nCases Serious,\\r\\nCritical Tot Cases/\\r\\n1M pop Deaths/\\r\\n1M pop  \\\n",
+       "0       2,120,510                2,970              293,206             3,239   \n",
+       "1          39,583                  698               31,698               376   \n",
+       "2         660,757                  869              538,892             2,365   \n",
+       "\n",
+       "  Total\\r\\nTests Tests/\\r\\n1M pop     Population  \n",
+       "0  1,118,158,870        3,339,729    334,805,269  \n",
+       "1    894,416,853          635,857  1,406,631,776  \n",
+       "2    271,490,188        4,139,547     65,584,518  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train= pd.read_csv(\"covidLive.csv\")\n",
+    "train.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.iat[3, 0] = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Total\\r\\nCases</th>\n",
+       "      <th>TotalDeaths</th>\n",
+       "      <th>New\\r\\nDeaths</th>\n",
+       "      <th>Total\\r\\nRecovered</th>\n",
+       "      <th>Active\\r\\nCases</th>\n",
+       "      <th>Serious,\\r\\nCritical</th>\n",
+       "      <th>Tot Cases/\\r\\n1M pop</th>\n",
+       "      <th>Deaths/\\r\\n1M pop</th>\n",
+       "      <th>Total\\r\\nTests</th>\n",
+       "      <th>Tests/\\r\\n1M pop</th>\n",
+       "      <th>Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>98,166,904</td>\n",
+       "      <td>1,084,282</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94,962,112</td>\n",
+       "      <td>2,120,510</td>\n",
+       "      <td>2,970</td>\n",
+       "      <td>293,206</td>\n",
+       "      <td>3,239</td>\n",
+       "      <td>1,118,158,870</td>\n",
+       "      <td>3,339,729</td>\n",
+       "      <td>334,805,269</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>India</td>\n",
+       "      <td>44,587,307</td>\n",
+       "      <td>528,629</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44,019,095</td>\n",
+       "      <td>39,583</td>\n",
+       "      <td>698</td>\n",
+       "      <td>31,698</td>\n",
+       "      <td>376</td>\n",
+       "      <td>894,416,853</td>\n",
+       "      <td>635,857</td>\n",
+       "      <td>1,406,631,776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>France</td>\n",
+       "      <td>35,342,950</td>\n",
+       "      <td>155,078</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34,527,115</td>\n",
+       "      <td>660,757</td>\n",
+       "      <td>869</td>\n",
+       "      <td>538,892</td>\n",
+       "      <td>2,365</td>\n",
+       "      <td>271,490,188</td>\n",
+       "      <td>4,139,547</td>\n",
+       "      <td>65,584,518</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   # Country Total\\r\\nCases TotalDeaths  New\\r\\nDeaths Total\\r\\nRecovered  \\\n",
+       "0  1     USA     98,166,904   1,084,282            NaN         94,962,112   \n",
+       "1  2   India     44,587,307     528,629            NaN         44,019,095   \n",
+       "2  3  France     35,342,950     155,078            NaN         34,527,115   \n",
+       "\n",
+       "  Active\\r\\nCases Serious,\\r\\nCritical Tot Cases/\\r\\n1M pop Deaths/\\r\\n1M pop  \\\n",
+       "0       2,120,510                2,970              293,206             3,239   \n",
+       "1          39,583                  698               31,698               376   \n",
+       "2         660,757                  869              538,892             2,365   \n",
+       "\n",
+       "  Total\\r\\nTests Tests/\\r\\n1M pop     Population  \n",
+       "0  1,118,158,870        3,339,729    334,805,269  \n",
+       "1    894,416,853          635,857  1,406,631,776  \n",
+       "2    271,490,188        4,139,547     65,584,518  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train.iat[3, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.iat[1, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'528,629'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.iat[1, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot convert float NaN to integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m--------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-194f26cb1011>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
+     ]
+    }
+   ],
+   "source": [
+    "for i, el in enumerate(train[\"TotalDeaths\"]):\n",
+    "    if type(el) == str:\n",
+    "        el = el.replace(\",\",\"\")\n",
+    "    train.iat[i,3] = int(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
